# ffmpeg_inaction

./: .gitignore  CMakeLists.txt  README.md  save_rtsp.cpp
include/libavutil/: ffversion.h
